<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/brown_background"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:padding="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/nav_prof_pic"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/navigation_drawer_pic"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:civ_border_width="2dp"
                app:srcCompat="@mipmap/ic_launcher_round"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:visibility="visible"
                android:layout_marginEnd="0dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="0dp"/>

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/logout"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nav_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/navigation_drawer_name"
            />

            <TextView
                android:id="@+id/nav_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navigation_drawer_email"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>