<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AboutFragment"
            android:background="#ffffff"
            android:padding="8dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_header" android:textSize="18sp" android:textColor="@android:color/black"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="#ffffff" android:id="@+id/textView" android:textStyle="bold"/>
        <ImageView
                android:src="@drawable/jboss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/textView"/>
        <TextView
                android:text="@string/overview_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView_overview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
        <Button
                android:text="@string/view_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/license" android:textAllCaps="true"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorPrimary"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView_overview"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="15sp"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
        <Button
                android:text="@string/about_jboss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/aboutJboss"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:textColor="@android:color/white"
                app:backgroundTint="@android:color/holo_red_dark" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_overview"/>
        <TextView
                android:text="@string/like_and_follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/like_follow_rate"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/linearLayout" android:layout_marginLeft="8dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.46"
                android:id="@+id/linearLayout"
                android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp" android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/license">
            <ImageButton
                    android:src="@drawable/ic_facebook"
                    app:backgroundTint="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/facebook" android:layout_weight="1"/>
            <ImageButton
                    android:src="@drawable/ic_twitter_logo"
                    android:layout_width="wrap_content"
                    app:backgroundTint="@android:color/white"
                    android:layout_height="wrap_content" android:id="@+id/twitter" android:layout_weight="1"/>
            <ImageButton
                    android:src="@drawable/ic_github_logo"
                    android:layout_width="wrap_content"
                    app:backgroundTint="@android:color/white"
                    android:layout_height="wrap_content" android:id="@+id/github" android:layout_weight="1"/>
            <ImageButton
                    android:src="@drawable/ic_google_play"
                    android:layout_width="wrap_content"
                    app:backgroundTint="@android:color/white"
                    android:layout_height="wrap_content" android:id="@+id/playstore" android:layout_weight="1"/>
        </LinearLayout>

        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:id="@+id/divider" android:background="@color/colorPrimary"
              android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
        <TextView
                android:text="@string/social_tab_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView_recyclerDescription"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
        <android.support.v7.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_recyclerDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/recyclerView" app:layout_constraintHorizontal_bias="0.562"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>